--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-streamlit==1.50.0
-pandas==2.3.3
-numpy==2.3.3
-requests==2.32.5
-pyarrow==21.0.0
-plotly==6.3.1
-pydeck==0.9.1
-folium==0.20.0
-geopandas==1.1.1
-shapely==2.1.2
-pyproj==3.7.2
-pyogrio==0.11.1
-scikit-learn==1.7.2
+streamlit
+pandas
+numpy
+geopandas
+altair
+requests
+
